--- a/DrizzleDrop/app/src/main/AndroidManifest.xml
+++ b/DrizzleDrop/app/src/main/AndroidManifest.xml
@@ -19,6 +19,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".DelayScreen"
+            android:label="Delay and Weather"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".DelayCalc"
+            android:label="@string/title_activity_delay_calc"
+            android:theme="@style/AppTheme.NoActionBar" >
+        </activity>
     </application>
 
 </manifest>
